--- a/man/atspkg.1
+++ b/man/atspkg.1
@@ -53,6 +53,11 @@ Display version information
 Ignore cached configuration file
 .RS
 .RE
+.TP
+.B \f[B]\-r\f[], \f[B]\-\-rebuild\f[]
+Rebuild all binary targets.
+.RS
+.RE
 .SH CONFIGURATION
 .PP
 \f[B]atspkg\f[] is configured with Dhall, in an atspkg.dhall file.
