--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -46,4 +46,6 @@ With that in mind, it is worthwhile to enumerate some things that it does
 ATSPackage supports three build types: binary, dynamic library, and static
 library.
 
+\subsection{Binary Builds}
+
 \end{document}
