--- a/man/atspkg.1
+++ b/man/atspkg.1
@@ -76,7 +76,7 @@ pi\ new\ ats\ project
 .IP
 .nf
 \f[C]
-pi\ fetch\ vmchale/haskell\-ats\ ambitious\-project
+pi\ git\ vmchale/haskell\-ats\ ambitious\-project
 \f[]
 .fi
 .SH BUGS
