--- a/man/atspkg.1
+++ b/man/atspkg.1
@@ -36,6 +36,10 @@ relevant manpages to $HOME/.local/share/man/man1
 .PP
 \f[B]upgrade\f[] \- Download the latest binary release of
 \f[B]atspkg\f[], if available
+.PP
+\f[B]valgrind\f[] \- Run \f[B]valgrind\f[] on the generated binary
+.PP
+\f[B]run\f[] \- Run the generated binary
 .SS OPTIONS
 .TP
 .B \f[B]\-h\f[] \f[B]\-\-help\f[]
