--- a/man/atspkg.1
+++ b/man/atspkg.1
@@ -61,6 +61,11 @@ Ignore cached configuration file
 Rebuild all binary targets.
 .RS
 .RE
+.TP
+.B \f[B]\-l\f[], \f[B]\-\-no\-lint\f[]
+Disable the shake linter
+.RS
+.RE
 .SH CONFIGURATION
 .PP
 \f[B]atspkg\f[] is configured with Dhall, in an atspkg.dhall file.
