--- a/man/atspkg.1
+++ b/man/atspkg.1
@@ -66,6 +66,11 @@ Rebuild all binary targets.
 Disable the shake linter
 .RS
 .RE
+.TP
+.B \f[B]\-t\f[], \f[B]\-\-target\f[]
+Set the compilation target using its triple.
+.RS
+.RE
 .SH CONFIGURATION
 .PP
 \f[B]atspkg\f[] is configured with Dhall, in an atspkg.dhall file.
