--- a/man/atspkg.1
+++ b/man/atspkg.1
@@ -80,7 +80,7 @@ Turn up the verbosity
 .RE
 .TP
 .B \f[B]\-d\f[], \f[B]\-\-detailed\f[]
-Enable detailed error messages
+Enable detailed error messages when checking configuration files
 .RS
 .RE
 .SH CONFIGURATION
