--- a/man/atspkg.1
+++ b/man/atspkg.1
@@ -42,6 +42,8 @@ relevant manpages to $HOME/.local/share/man/man1
 \f[B]run\f[] \- Run the generated binary
 .PP
 \f[B]check\f[] \- Check a pkg.dhall file to make sure it is well\-typed.
+.PP
+\f[B]list\f[] \- List all available packages in current package set.
 .SS OPTIONS
 .TP
 .B \f[B]\-h\f[] \f[B]\-\-help\f[]
