--- a/man/atspkg.1
+++ b/man/atspkg.1
@@ -44,7 +44,7 @@ relevant manpages to $HOME/.local/share/man/man1
 \f[B]check\f[] \- Check a pkg.dhall file to make sure it is well\-typed.
 .PP
 \f[B]list\f[] \- List all available packages in current package set.
-.SS OPTIONS
+.SH OPTIONS
 .TP
 .B \f[B]\-h\f[] \f[B]\-\-help\f[]
 Display help
