--- a/ats-pkg/man/atspkg.1
+++ b/ats-pkg/man/atspkg.1
@@ -41,7 +41,10 @@ relevant manpages to $HOME/.local/share/man/man1
 .PP
 \f[B]run\f[] \- Run the generated binary
 .PP
-\f[B]check\f[] \- Check a package set to make sure it is well\-typed.
+\f[B]check\f[] \- Check a pkg.dhall file to make sure it is well\-typed.
+.PP
+\f[B]check\-setup\f[] \- Check a package set to make sure it is
+well\-typed.
 .PP
 \f[B]list\f[] \- List all available packages in current package set.
 .PP
