--- a/ats-pkg/man/atspkg.1
+++ b/ats-pkg/man/atspkg.1
@@ -43,7 +43,7 @@ relevant manpages to $HOME/.local/share/man/man1
 .PP
 \f[B]check\f[] \- Check a pkg.dhall file to make sure it is well\-typed.
 .PP
-\f[B]check\-setup\f[] \- Check a package set to make sure it is
+\f[B]check\-set\f[] \- Check a package set to make sure it is
 well\-typed.
 .PP
 \f[B]list\f[] \- List all available packages in current package set.
