--- a/ats-pkg/docs/manual.tex
+++ b/ats-pkg/docs/manual.tex
@@ -26,7 +26,8 @@ things it accomplishes:
   \item Simplified builds. As ATSPackage contains scripts to download the
     compiler, builds are easier for potential contributors.
   \item Haskell integration. ATSPackage has first-class support for building ATS
-    code that depends on Haskell libraries. 
+    code that depends on Haskell libraries and ATS code that depends on Haskell
+    libraries.
 \end{enumerate}
 
 With that in mind, it is worthwhile to enumerate some things that it does
