--- a/ats-pkg/man/atspkg.1
+++ b/ats-pkg/man/atspkg.1
@@ -50,6 +50,8 @@ well\-typed.
 .PP
 \f[B]pack\f[] \- Create a tarball suitable for packaging the compiler.
 Takes as an argument a directory containing the unpacked compiler.
+.PP
+\f[B]setup\f[] \- Set up manpages and shell completions.
 .SH OPTIONS
 .TP
 .B \f[B]\-h\f[] \f[B]\-\-help\f[]
