--- a/ats-pkg/man/atspkg.1
+++ b/ats-pkg/man/atspkg.1
@@ -64,6 +64,11 @@ Display version information
 .RS
 .RE
 .TP
+.B \f[B]\-\-pkg\-args\f[]
+Arguments to be passed to atspkg.dhall
+.RS
+.RE
+.TP
 .B \f[B]\-c\f[] \f[B]\-\-no\-cache\f[]
 Ignore cached configuration file
 .RS
