--- a/ats-pkg/man/atspkg.1
+++ b/ats-pkg/man/atspkg.1
@@ -24,6 +24,8 @@ atspkg test
 .PP
 \f[B]test\f[R] - Run all tests listed in atspkg.dhall
 .PP
+\f[B]bench\f[R] - Rull all benchmarks listed in atspkg.dhall
+.PP
 \f[B]clean\f[R] - Clean current project directory
 .PP
 \f[B]nuke\f[R] - Remove all local files installed by \f[B]atspkg\f[R]
