--- a/ats-pkg/man/atspkg.1
+++ b/ats-pkg/man/atspkg.1
@@ -81,6 +81,9 @@ Turn up the verbosity
 .TP
 .B \f[B]-d\f[R], \f[B]--detailed\f[R]
 Enable detailed error messages when checking configuration files
+.TP
+.B \f[B]--debug\f[R]
+Disable binary stripping and pass -g to the C compiler
 .SH CONFIGURATION
 .PP
 \f[B]atspkg\f[R] is configured with Dhall, in an atspkg.dhall file.
