--- a/ats-format/man/atsfmt.1
+++ b/ats-format/man/atsfmt.1
@@ -15,7 +15,7 @@ atsfmt --default-config
 .PP
 cat file.dats | atsfmt
 .PP
-atsfmt \[en]default-config
+atsfmt --default-config
 .SH DESCRIPTION
 .PP
 \f[B]atsfmt\f[R] is an opinionated formatter for that ATS2 language.
